[package]
name = "pathfinder_metal"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[dependencies]
bitflags = "1.0"
byteorder = "1.3"
block = "0.1"
cocoa = "0.19.1"
core-foundation = "0.7"
foreign-types = "0.3"
metal = "0.17.1"
objc = "0.2.7"

[dependencies.pathfinder_geometry]
path = "../geometry"

[dependencies.pathfinder_gpu]
path = "../gpu"

[dependencies.pathfinder_simd]
path = "../simd"
